<resources>
    <string name="app_name">Wantton</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Series</string>
    <string name="now_playing">Now Playing</string>
    <string name="how_to_search">You can search by the <b>title</b> of the show.</string>
    <string name="cd_back">back</string>
    <string name="cd_timeline">timeline</string>
    <string name="cd_image_movie">image movie</string>
    <string name="cd_star">star</string>
    <string name="cd_dot">dot</string>
    <string name="cd_splash">splash</string>
    <string name="cd_shimmer_image">shimmer image</string>
    <string name="cd_empty">empty</string>
    <string name="cd_error">error</string>
    <string name="on_the_air">On The Air</string>
    <string name="not_found">Show not found.</string>
    <string name="unable_to_resolve">Unable to resolve host</string>
    <string name="empty_favorite">You haven\'t added any favorite shows</string>
    <string name="remove_favorite">Remove from Favorite</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="tv_series">Tv Series</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="search_movie_or_tv_series">Search Movie or Tv Series</string>
    <string name="error_loading_content">Error Loading Content</string>
    <string name="oops_something_went_wrong">Oops.. something went wrong!</string>
    <string name="hmmm">Hmmm..</string>
    <string name="all_quiet_on_the_western_front">All Quiet on the Western Front</string>
    <string name="rate">7.3</string>
    <string name="year">2016</string>
    <string name="dwayne_johnson">Dwayne Johnson</string>
    <string name="black_adam">Black Adam</string>
    <string name="search">Search</string>
    <string name="view_all">View All</string>
    <string name="discover">Discover</string>
    <string name="favorite">Favorite</string>
    <string name="joker">Joker</string>
    <string name="movies">Movies</string>
    <string name="biography">Biography</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="similar_movie_or_tv_series">Similar Movie or Tv Series</string>
    <string name="born">Born:</string>
    <string name="dead">Dead:</string>
    <string name="known_as">Known as:</string>
    <string name="list_movie">List Movie</string>
    <string name="list_tv_series">List Tv Series</string>
    <string name="label_error">Error</string>
    <string name="action_retry">Retry</string>
</resources>