<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginRight="8dp"
    android:paddingTop="8dp"
    android:background="@color/black">

    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="66dp"
        android:layout_height="98dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cd_image_movie"
            android:src="@drawable/empty" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/all_quiet_on_the_western_front"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.392" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/cd_star"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="2dp"
        android:textColor="@color/soft_grey"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/star"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/dot"
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_marginLeft="6dp"
        android:contentDescription="@string/cd_dot"
        android:src="@drawable/dot"
        app:layout_constraintBottom_toBottomOf="@+id/tv_year"
        app:layout_constraintStart_toEndOf="@+id/tv_rate"
        app:layout_constraintTop_toTopOf="@+id/tv_rate" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:text="@string/year"
        android:layout_marginTop="4dp"
        android:textColor="@color/soft_grey"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>