<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".detail.DetailCastActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dwayne_johnson"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_movie"
                android:layout_width="140dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_goneMarginLeft="8dp">

                <ImageView
                    android:id="@+id/img_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cd_image_movie"
                    android:scaleType="centerCrop"
                    android:src="@drawable/empty" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/biography"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/card_movie"
                app:layout_constraintTop_toTopOf="@+id/card_movie" />

            <TextView
                android:id="@+id/tv_biography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:lineHeight="24sp"
                android:maxLines="3"
                android:text="-"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/born"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_biography"
                app:layout_constraintTop_toBottomOf="@+id/tv_biography" />

            <TextView
                android:id="@+id/tv_born"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="-"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/tv_title_dead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead"
                android:visibility="gone"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_biography"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/tv_dead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:visibility="gone"
                android:layout_marginLeft="8dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_dead"
                app:layout_constraintStart_toEndOf="@+id/tv_title_dead"
                app:layout_constraintTop_toTopOf="@+id/tv_title_dead" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/known_as"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_title_dead"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_dead" />

            <TextView
                android:id="@+id/tv_known_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="-"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/list_movie"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/card_movie"
                app:layout_constraintTop_toBottomOf="@+id/card_movie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_filmography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/list_tv_series"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/rv_filmography"
                app:layout_constraintTop_toBottomOf="@+id/rv_filmography" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <include
                android:id="@+id/view_loading"
                layout="@layout/view_loading"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Wantton.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:theme="@style/Theme.Wantton.PopupOverlay">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_back"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:id="@+id/tv_title_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                 android:layout_marginLeft="36dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>