<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/now_playing"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/view_all_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/view_all"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_now_playing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_now_playing" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="@+id/tv_now_playing"
                app:layout_constraintTop_toBottomOf="@+id/tv_now_playing" />

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/popular"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/guideline1" />

            <TextView
                android:id="@+id/view_all_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/view_all"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_popular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="@+id/tv_popular"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular" />

            <TextView
                android:id="@+id/tv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/top_rated"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/guideline2" />

            <TextView
                android:id="@+id/view_all_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/view_all"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_top_rated"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_top_rated" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="@+id/tv_top_rated"
                app:layout_constraintTop_toBottomOf="@+id/tv_top_rated" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/tv_now_playing"
                app:layout_constraintTop_toBottomOf="@+id/tv_now_playing"
                app:shimmer_auto_start="true">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                    </LinearLayout>
                </ScrollView>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="267dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="539dp" />


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/tv_popular"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular"
                app:shimmer_auto_start="true">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                    </LinearLayout>
                </ScrollView>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/tv_top_rated"
                app:layout_constraintTop_toBottomOf="@+id/tv_top_rated"
                app:shimmer_auto_start="true">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                        <include layout="@layout/shimmer_item_list" />

                    </LinearLayout>
                </ScrollView>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <include
                android:id="@+id/view_error"
                layout="@layout/view_error"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>